2007-06-24  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* avogadro/src/editcommands.[h,cpp]: Support for selecting new
	atoms when pasting. Fixes PR#1739837.

	* avogadro/src/mainwidnow.cpp: Pass along the widget when creating
	a paste command. Fix minor crashes when copy/cut with selected
	bonds. (Now we can select more than just atoms).

2007-06-21  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* avogadro/src/extensions/h2methylextension.cpp: New extension for
	"sculpting" hydrogen atoms to methyl groups. Works also on
	selected hydrogens.

	* avogadro/src/extensions/hydrogens*: Fix PR#1739841. Only add or
	remove hydrogens for selected atoms if some atoms are selected.

2007-06-19  Marcus D. Hanwell <marcus@cryos.org>

	* libavogadro/src/glwidget.cpp, libavogadro/src/engines/*.cpp:
	Initialise the painter at the start of the GLWidget render function,
	removed all calls to painter begin and end from the engines.

2007-06-19  Donald E. Curtis <dcurtis3@sourceforge.net>

	* avogadro/src/extensions/ghemicalextension.cpp: Added threading so that a
	progress dialog is displayed.

	* libavogadro/src/glwidget.*: Added ::radius function to the GLWidget that
	way tools and engines only need to ask the GLWidget the radius rather than
	actually going through all engines on their own.  Also, engines more
	accurately give radius.

	* libavogadro/src/engine.*: updated ::radius function to take the GLWidget
	as a parameter.

	* libavogadro/src/engines/*: updated engines to not maintain an internal
	pointer to the GLWidget that was last called.

2007-06-19  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* libavogadro/src/glwidget.cpp (updateGeometry): Initial attempt
	at updating geometry based on unit cell parameters. This *seems*
	like the correct approach, but I have not checked with Benoit or
	fully tested. This tracks PR#1739844.

2007-06-19  Marcus D. Hanwell <marcus@cryos.org>

	* libavogadro/src/tools/navigatetool.cpp: Updated tooltip to reflect